--- a/package.json
+++ b/package.json
@@ -10,7 +10,9 @@
     "prepare": "husky"
   },
   "dependencies": {
+    "@prisma/client": "^5.13.0",
     "next": "14.1.1",
+    "prisma": "^5.13.0",
     "react": "^18",
     "react-dom": "^18"
   },
@@ -25,7 +27,7 @@
     "lint-staged": "^15.2.2",
     "postcss": "^8",
     "prettier": "^3.2.5",
-    "sass": "^1.71.1",
+    "sass": "^1.75.0",
     "tailwindcss": "^3.3.0",
     "typescript": "^5"
   }
