--- a/package.json
+++ b/package.json
@@ -11,12 +11,21 @@
   },
   "dependencies": {
     "@prisma/client": "^5.13.0",
+    "@tanstack/react-query": "^5.40.0",
+    "class-variance-authority": "^0.7.0",
+    "clsx": "^2.1.1",
+    "framer-motion": "^11.2.9",
+    "lucide-react": "^0.381.0",
     "next": "14.1.1",
     "prisma": "^5.13.0",
     "react": "^18",
-    "react-dom": "^18"
+    "react-dom": "^18",
+    "sharp": "^0.33.4",
+    "tailwind-merge": "^2.3.0",
+    "tailwindcss-animate": "^1.0.7"
   },
   "devDependencies": {
+    "@tanstack/eslint-plugin-query": "^5.35.6",
     "@types/node": "^20",
     "@types/react": "^18",
     "@types/react-dom": "^18",
