--- a/package.json
+++ b/package.json
@@ -10,14 +10,15 @@
     "prepare": "husky"
   },
   "dependencies": {
-    "@prisma/client": "^5.13.0",
+    "@prisma/client": "^5.14.0",
     "@tanstack/react-query": "^5.40.0",
     "class-variance-authority": "^0.7.0",
     "clsx": "^2.1.1",
     "framer-motion": "^11.2.9",
     "lucide-react": "^0.381.0",
     "next": "14.1.1",
-    "prisma": "^5.13.0",
+    "next-auth": "^4.24.7",
+    "prisma": "^5.14.0",
     "react": "^18",
     "react-dom": "^18",
     "sharp": "^0.33.4",
