--- a/package.json
+++ b/package.json
@@ -7,7 +7,8 @@
     "build": "next build",
     "start": "next start",
     "lint": "next lint",
-    "prepare": "husky"
+    "prepare": "husky",
+    "local:server": "node src/app/server/signallingServer/signallingServer.ts"
   },
   "dependencies": {
     "@prisma/client": "^5.14.0",
@@ -15,13 +16,17 @@
     "class-variance-authority": "^0.7.0",
     "clsx": "^2.1.1",
     "framer-motion": "^11.2.9",
+    "input-otp": "^1.4.2",
     "lucide-react": "^0.381.0",
     "next": "14.1.1",
     "next-auth": "^4.24.7",
     "prisma": "^5.14.0",
     "react": "^18",
     "react-dom": "^18",
+    "react-use": "^17.6.0",
     "sharp": "^0.33.4",
+    "socket.io": "^4.8.1",
+    "socket.io-client": "^4.8.1",
     "tailwind-merge": "^2.3.0",
     "tailwindcss-animate": "^1.0.7"
   },
@@ -34,10 +39,10 @@
     "eslint": "^8.57.0",
     "eslint-config-next": "14.1.1",
     "husky": "^9.0.11",
-    "lint-staged": "^15.2.2",
+    "lint-staged": "^16.1.2",
     "postcss": "^8",
     "prettier": "^3.2.5",
-    "sass": "^1.75.0",
+    "sass": "^1.89.2",
     "tailwindcss": "^3.3.0",
     "typescript": "^5"
   }
