--- a/render.yaml
+++ b/render.yaml
@@ -2,16 +2,6 @@ services:
   - type: web
     name: nextapp
     env: node
-    buildCommand: |
-      yarn install
-      yarn build
-    startCommand: yarn start
-    envVars:
-      - key: SIGNAL_SERVER
-        value: 4301
-      - key: HOST_PORT
-        value: 3000
-    envVarsFile: .env
     plan: free
     dockerfilePath: ./Dockerfile
     autoDeploy: true
@@ -21,17 +11,8 @@ services:
   - type: web
     name: signalserver
     env: node
-    buildCommand: |
-      yarn install
-    startCommand: yarn run local:server
-    envVars:
-      - key: SIGNAL_SERVER
-        value: 4301
-      - key: HOST_PORT
-        value: 3000
-    envVarsFile: .env
     plan: free
     dockerfilePath: ./SignallingServer/Dockerfile
     autoDeploy: true
     repo: https://github.com/elegantShock2258/multiplayer-wordle
-    region: oregon
+    region: singapore
