--- a/render.yaml
+++ b/render.yaml
@@ -1,7 +1,7 @@
 services:
   - type: web
     name: nextapp
-    env: node
+    env: docker
     plan: free
     dockerfilePath: ./Dockerfile
     autoDeploy: true
@@ -10,7 +10,7 @@ services:
 
   - type: web
     name: signalserver
-    env: node
+    env: docker
     plan: free
     dockerfilePath: ./SignallingServer/Dockerfile
     autoDeploy: true
