--- a/SignallingServer/package.json
+++ b/SignallingServer/package.json
@@ -6,10 +6,12 @@
   },
   "dependencies": {
     "dotenv": "^17.2.1",
+    "express": "^5.1.0",
     "socket.io": "^4.8.1",
     "ws": "^8.0.0"
   },
   "devDependencies": {
+    "@types/express": "^5.0.3",
     "typescript": "^5.0.0"
   }
 }
