--- a/SignallingServer/package.json
+++ b/SignallingServer/package.json
@@ -10,6 +10,7 @@
     "socket.io": "^4.8.1",
     "ws": "^8.0.0"
   },
+  "type": "module",
   "devDependencies": {
     "@types/express": "^5.0.3",
     "typescript": "^5.0.0"
