--- a/package.json
+++ b/package.json
@@ -16,6 +16,7 @@
     "class-variance-authority": "^0.7.0",
     "clsx": "^2.1.1",
     "dotenv": "^17.2.1",
+    "express": "^5.1.0",
     "framer-motion": "^11.2.9",
     "input-otp": "^1.4.2",
     "lucide-react": "^0.381.0",
