wip: ui changes

--- a/package.json
+++ b/package.json
@@ -3,7 +3,7 @@
   "version": "0.1.0",
   "private": true,
   "scripts": {
-    "dev": "next dev",
+    "dev": "next dev --turbopack",
     "build": "next build",
     "start": "next start",
     "lint": "next lint",
@@ -15,16 +15,18 @@
     "@tanstack/react-query": "^5.40.0",
     "class-variance-authority": "^0.7.0",
     "clsx": "^2.1.1",
+    "dlx": "^0.2.1",
     "dotenv": "^17.2.1",
     "express": "^5.1.0",
     "framer-motion": "^11.2.9",
+    "global": "^4.4.0",
     "input-otp": "^1.4.2",
     "lucide-react": "^0.381.0",
-    "next": "14.1.1",
+    "next": "15.5.0",
     "next-auth": "^4.24.7",
     "prisma": "^5.14.0",
-    "react": "^18",
-    "react-dom": "^18",
+    "react": "19.1.1",
+    "react-dom": "19.1.1",
     "react-hot-toast": "^2.5.2",
     "react-use": "^17.6.0",
     "sharp": "^0.33.4",
@@ -37,12 +39,12 @@
     "@tanstack/eslint-plugin-query": "^5.35.6",
     "@types/express": "^5.0.3",
     "@types/node": "^20",
-    "@types/react": "^18",
-    "@types/react-dom": "^18",
+    "@types/react": "19.1.11",
+    "@types/react-dom": "19.1.7",
     "autoprefixer": "^10.0.1",
     "concurrently": "^9.2.0",
     "eslint": "^8.57.0",
-    "eslint-config-next": "14.1.1",
+    "eslint-config-next": "15.5.0",
     "husky": "^9.0.11",
     "lint-staged": "^16.1.2",
     "postcss": "^8",
@@ -50,5 +52,9 @@
     "sass": "^1.89.2",
     "tailwindcss": "^3.3.0",
     "typescript": "^5"
+  },
+  "resolutions": {
+    "@types/react": "19.1.11",
+    "@types/react-dom": "19.1.7"
   }
 }
